# Bloodstone

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: FindSDL2.cmake
engine/include/: Engine.hpp  EngineConfiguration.hpp
engine/include/Components/: Component.hpp  GameEntity.hpp  IDrawableComponent.hpp  IEntityComponent.hpp  SpriteRenderer.hpp  Transform.hpp
engine/include/Core/: JsonUtility.hpp
engine/include/Core/Math/: Mathf.hpp  Rect.hpp  Vec2.hpp
engine/include/Core/Time/: Stopwatch.hpp  Time.hpp
engine/include/Graphics/: Sprite.hpp  TextureMeta.hpp
engine/include/Rendering/: Color.hpp  Color8.hpp  IDrawable.hpp  IRenderTarget.hpp  RenderWindow.hpp  Sprite.hpp  Texture.hpp
engine/include/Resources/: ResourceManager.hpp  Scene.hpp
engine/include/Window/: Event.hpp  Keyboard.hpp  Window.hpp  WindowMode.hpp
engine/src/: Engine.cpp
engine/src/Components/: Component.cpp  GameEntity.cpp  SpriteRenderer.cpp  Transform.cpp
engine/src/Core/Math/: Vec2.hpp
engine/src/Core/Time/: Stopwatch.cpp  Time.cpp
engine/src/Graphics/: Sprite.cpp
engine/src/Rendering/: Color.cpp  Color8.cpp  RenderWindow.cpp  Sprite.cpp  Texture.cpp
engine/src/Resources/: ResourceManager.cpp  Scene.cpp
engine/src/Window/: Keyboard.cpp  Window.cpp
game/Assets/: config.json
game/Assets/Textures/: bg.json  player_fly.json
game/include/Components/: PlayerController.hpp
game/include/Gameplay/: Gameplay.hpp
game/src/: main.cpp
game/src/Components/: PlayerController.cpp
